<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pro.disconnect.me.trackers.TrackerFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0"
        android:background="@color/gray4_disconnect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/gray4_disconnect" />

        <LinearLayout style="@style/stats_top_container">

            <TextView
                style="@style/stats_top_label"
                android:text="@string/stats_label_blocked" />

            <TextView
                android:id="@+id/blocked"
                style="@style/stats_top_value"
                tools:text="272" />

            <TextView
                style="@style/stats_top_label"
                android:text="@string/stats_label_trackers" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/gray4_disconnect" />

        <LinearLayout style="@style/stats_top_container">

            <TextView
                style="@style/stats_top_label"
                android:text="@string/stats_label_time" />

            <TextView
                android:id="@+id/time"
                style="@style/stats_top_value"
                tools:text="272" />

            <TextView
                style="@style/stats_top_label"
                android:text="@string/stats_label_seconds" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/gray4_disconnect" />

        <LinearLayout style="@style/stats_top_container">

            <TextView
                style="@style/stats_top_label"
                android:text="@string/stats_label_data" />

            <TextView
                android:id="@+id/data"
                style="@style/stats_top_value"
                tools:text="272" />

            <TextView
                style="@style/stats_top_label"
                android:text="@string/stats_label_mb" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/text_margin_half"
            android:layout_weight="0"
            android:background="@color/gray4_disconnect" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0"
        android:background="@color/gray4_disconnect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/day_bucket"
            style="@style/bucket_label"
            android:text="@string/stats_label_1d" />

        <TextView
            android:id="@+id/week_bucket"
            style="@style/bucket_label"
            android:text="@string/stats_label_1w" />

        <TextView
            android:id="@+id/month_bucket"
            style="@style/bucket_label"
            android:text="@string/stats_label_1m" />

        <TextView
            android:id="@+id/all_bucket"
            style="@style/bucket_label"
            android:text="@string/stats_label_all" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0"
        android:background="@color/gray4_disconnect" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
</LinearLayout>
