<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_disconnect">

    <android.support.v4.widget.NestedScrollView
        android:name="pro.disconnect.me.billing.SubscriptionFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/text_margin"
                app:srcCompat="@drawable/ic_cancel_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="42dp"
                    android:src="@drawable/d_shield" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/text_margin_half"
                    android:text="@string/upgrade_title"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_half"
                android:orientation="horizontal">

                <ImageView
                    style="@style/premium_feature_icon"
                    android:src="@drawable/feature_icn_3devices" />

                <TextView
                    style="@style/premium_feature_title"
                    android:text="@string/upgrade_protect_3_devices" />

                <ImageView
                    style="@style/premium_feature_icon"
                    android:src="@drawable/feature_icn_protection" />

                <TextView
                    style="@style/premium_feature_title"
                    android:text="@string/upgrade_tracker_protection" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_half"
                android:orientation="horizontal">

                <ImageView
                    style="@style/premium_feature_icon"
                    android:src="@drawable/feature_icn_tutorial" />

                <TextView
                    style="@style/premium_feature_title"
                    android:text="@string/upgrade_video_tutorials" />

                <ImageView
                    style="@style/premium_feature_icon"
                    android:src="@drawable/feature_icn_encrypted" />

                <TextView
                    style="@style/premium_feature_title"
                    android:text="@string/upgrade_encrypted_internet" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_half"
                android:orientation="horizontal">

                <ImageView
                    style="@style/premium_feature_icon"
                    android:src="@drawable/feature_icon_alerts" />

                <TextView
                    style="@style/premium_feature_title"
                    android:text="@string/upgrade_vulnerability_alerts" />

                <ImageView
                    style="@style/premium_feature_icon"
                    android:src="@drawable/feature_icn_location" />

                <TextView
                    style="@style/premium_feature_title"
                    android:text="@string/upgrade_mask_location" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/text_margin"
                app:layoutManager="LinearLayoutManager"
                tools:context="pro.disconnect.me.billing.UpgradeFragment"
                tools:listitem="@layout/fragment_subscription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upgrade_bottom_title"
                android:textColor="@color/grey2_disconnect"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/terms_and_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:gravity="center"
                android:text="@string/upgrade_terms_and_conditions"
                android:textColor="@color/grey2_disconnect" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/busy_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</FrameLayout>
